external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_generic_constraints.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
   ┌─ tests/move_2024/typing/signed_int_generic_constraints.move:17:5
   │
17 │     struct Box<T> has copy, drop {
   │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
   │
   = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.
